demo/static/logs/webError/2016-08-08 09:18:47.720.log
/
gets:null
null
/Users/zhouguodong/Documents/github/latte_shell_modules/latte_webServer4/lib/view/types/html.js:50
						return stream.pipe(Zlib.createGzip();
						                                   ^
SyntaxError: missing ) after argument list
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:513:28)
    at Object.Module._extensions..js (module.js:550:10)
    at Module.load (module.js:458:32)
    at tryModuleLoad (module.js:417:12)
    at Function.Module._load (module.js:409:3)
    at Module.require (module.js:468:17)
    at require (internal/module.js:20:19)
    at /Users/zhouguodong/Documents/github/latte_shell_modules/latte_webServer4/lib/server/static/index.js:73:19
    at /Users/zhouguodong/Documents/github/latte_shell_modules/latte_webServer4/lib/server/static/index.js:37:5